feat(email validation): make email validation case insensitive

--- a/pom.xml
+++ b/pom.xml
@@ -415,6 +415,8 @@
                     <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
                     <scmVersionType>tag</scmVersionType>
                     <scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
+                    <scmVersionType>branch</scmVersionType>
+                    <scmVersion>CHK-1712-mail-case-insensitive</scmVersion>
                     <goals>install -DskipTests</goals>
                 </configuration>
                 <executions>
