--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -169,7 +169,7 @@ microservice-chart:
     PERSONAL_DATA_VAULT_API_BASE_PATH: "https://api.tokenizer.pdv.pagopa.it/tokenizer/v1"
     WARMUP_REQUEST_NEW_TRANSACTION_NOTICE_CODE_PREFIX: "3020"
     LOGO_CARD_BRANDING_MAPPING: >
-      { VISA:'https://dev.checkout.pagopa.it/assets/creditcard/visa.png',  MASTERCARD:'https://dev.checkout.pagopa.it/assets/creditcard/mastercard.png', DINERS:'https://dev.checkout.pagopa.it/assets/creditcard/diners.png', MAESTRO:'https://dev.checkout.pagopa.it/assets/creditcard/maestro.png', AMEX:'https://dev.checkout.pagopa.it/assets/creditcard/amex.png', UNKNOWN:'https://dev.checkout.pagopa.it/assets/creditcard/generic.png' }
+      { VISA:'https://checkout.pagopa.it/assets/creditcard/visa.png',  MASTERCARD:'https://checkout.pagopa.it/assets/creditcard/mastercard.png', DINERS:'https://checkout.pagopa.it/assets/creditcard/diners.png', MAESTRO:'https://checkout.pagopa.it/assets/creditcard/maestro.png', AMEX:'https://checkout.pagopa.it/assets/creditcard/amex.png', UNKNOWN:'https://checkout.pagopa.it/assets/creditcard/generic.png' }
 
     SERVER_ERROR_INCLUDE_STACKTRACE: "never"
     OTEL_RESOURCE_ATTRIBUTES: "service.name=pagopa-ecommerce-transactions-service,deployment.environment=prod"
