--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <java.version>17</java.version>
         <spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
         <jacoco.version>0.8.8</jacoco.version>
-        <pagopa-ecommerce-commons.version>0.19.2</pagopa-ecommerce-commons.version>
+        <pagopa-ecommerce-commons.version>0.19.3</pagopa-ecommerce-commons.version>
         <spotless.version>2.28.0</spotless.version>
         <elastic-apm.version>1.38.0</elastic-apm.version>
         <ecs-logging-version>1.5.0</ecs-logging-version>
@@ -69,6 +69,10 @@
             <groupId>com.azure</groupId>
             <artifactId>azure-storage-queue</artifactId>
             <version>12.14.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-core-serializer-json-jackson</artifactId>
         </dependency>
         <dependency>
             <groupId>wsdl4j</groupId>
@@ -216,6 +220,23 @@
             <artifactId>apm-agent-api</artifactId>
             <version>${elastic-apm.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-sdk</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-exporter-otlp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-semconv</artifactId>
+            <version>1.27.0-alpha</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -223,6 +244,13 @@
                 <groupId>com.azure.spring</groupId>
                 <artifactId>spring-cloud-azure-dependencies</artifactId>
                 <version>${spring-cloud-azure.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.opentelemetry</groupId>
+                <artifactId>opentelemetry-bom</artifactId>
+                <version>1.27.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
