add Npg Client configurations and bean

--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -58,3 +58,9 @@ logo.cardBrandMapping={\
   MAESTRO:'https://maestro.cdn.url',\
   DINERS:'https://diners.cdn.url',\
   UNKNOWN:'https://unknown.cdn.url'}
+
+npg.uri=http://localhost/npg
+npg.readTimeout=10000
+npg.connectionTimeout=10000
+npg.client.maxInMemory=16777216
+npg.client.key=npg_key
