add env var to helm values

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -114,6 +114,10 @@ microservice-chart:
     OTEL_METRICS_EXPORTER: otlp
     OTEL_LOGS_EXPORTER: none
     OTEL_TRACES_SAMPLER: "always_on"
+    NPG_URI: "https://localhost/npg"
+    NPG_READ_TIMEOUT: 10000
+    NPG_CONNECTION_TIMEOUT: 10000
+    SPRING_MAX_IN_MEM_SIZE: 16777216
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
@@ -125,6 +129,7 @@ microservice-chart:
     PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
     ECOMMERCE_PAYMENT_METHODS_APY_KEY: payment-method-api-key
     OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
+    NPG_KEY: npg-key
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
