--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,4 +69,4 @@ npg.uri=${NPG_URI}
 npg.readTimeout=${NPG_READ_TIMEOUT}
 npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
 npg.client.maxInMemory=${SPRING_MAX_IN_MEM_SIZE}
-npg.client.key=${NPG_KEY}
+npg.client.key=${NPG_API_KEY}
