--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -129,7 +129,7 @@ microservice-chart:
     PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
     ECOMMERCE_PAYMENT_METHODS_APY_KEY: payment-method-api-key
     OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
-    NPG_KEY: npg-key
+    NPG_API_KEY: npg-api-key
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
