docs(readme): add missing env vars to readme

--- a/.env.example
+++ b/.env.example
@@ -62,5 +62,4 @@ LOGO_CARD_BRANDING_MAPPING={VISA:'https://dev.checkout.pagopa.it/assets/creditca
 NPG_URI="https://localhost/npg"
 NPG_READ_TIMEOUT=10000
 NPG_CONNECTION_TIMEOUT=10000
-SPRING_MAX_IN_MEM_SIZE=16777216
-NPG_KEY="npg-key"
+NPG_API_KEY="npg-api-key"
