feat(npg): [CHK-1782] update commons library (#291)
* update commons library

* add Npg Client configurations and bean

* fix commons import

* update commons version

* add env var to helm values

* add npg web client config

* add tests

* Update helm/values-prod.yaml

* refactor(config): remove unnecessary interface implementation of `WebfluxConfigurer`

* docs(readme): add missing env vars to readme

* refactor(lint): remove unnecessary `public` modifier in NPG config tests

* remove npg client payload limit

* remove unused import

* update intellij env

---------

Co-authored-by: Gianluca Ciuffa <gianlucaciuffa@MBP-di-Gianluca.homenet.telecomitalia.it>
Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

--- a/.env.example
+++ b/.env.example
@@ -26,8 +26,6 @@ ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT=10000
 ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT=10000
 ECOMMERCE_PAYMENT_METHODS_APY_KEY=payment-method-api-key
 
-SPRING_MAX_IN_MEM_SIZE=16777216
-
 AFM_URI="http://pagopa-gec-mock:3000/afm/node/calculator-service/v1/fees"
 AFM_READ_TIMEOUT=10000
 AFM_CONNECTION_TIMEOUT=10000
@@ -58,3 +56,8 @@ PERSONAL_DATA_VAULT_API_KEY=personal-data-vault-api-key
 PERSONAL_DATA_VAULT_API_BASE_PATH="http://pagopa-pdv-mock:8092"
 
 LOGO_CARD_BRANDING_MAPPING={VISA:'https://dev.checkout.pagopa.it/assets/creditcard/carta_visa.png',MASTERCARD:'https://dev.checkout.pagopa.it/assets/creditcard/carta_mc.png',DINERS:'https://dev.checkout.pagopa.it/assets/creditcard/carta_diners.png',MAESTRO:'https://dev.checkout.pagopa.it/assets/creditcard/carta_maestro.png',AMEX:'https://dev.checkout.pagopa.it/assets/creditcard/carta_amex.png',UNKNOWN:'https://dev.checkout.pagopa.it/assets/creditcard/generic.png'}
+
+NPG_URI="https://localhost/npg"
+NPG_READ_TIMEOUT=10000
+NPG_CONNECTION_TIMEOUT=10000
+NPG_API_KEY="npg-api-key"
