--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,3 +64,8 @@ confidentialDataManager.personalDataVault.apiBasePath=${PERSONAL_DATA_VAULT_API_
 warmup.request.newTransaction.noticeCodePrefix=${WARMUP_REQUEST_NEW_TRANSACTION_NOTICE_CODE_PREFIX:3020}
 
 logo.cardBrandMapping=${LOGO_CARD_BRANDING_MAPPING}
+
+npg.uri=${NPG_URI}
+npg.readTimeout=${NPG_READ_TIMEOUT}
+npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
+npg.client.key=${NPG_API_KEY}
