--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -451,13 +451,13 @@ components:
           oneOf:
             - $ref: "#/components/schemas/PostePayAuthRequestDetails"
             - $ref: "#/components/schemas/CardAuthRequestDetails"
-            - $ref: "#/components/schemas/NpgAuthRequestDetails"
+            - $ref: "#/components/schemas/CardsAuthRequestDetails"
           discriminator:
             propertyName: detailType
             mapping:
               postepay: "#/components/schemas/PostePayAuthRequestDetails"
               card: "#/components/schemas/CardAuthRequestDetails"
-              cards: "#/components/schemas/NpgAuthRequestDetails"
+              cards: "#/components/schemas/CardsAuthRequestDetails"
 
       required:
         - amount
@@ -535,9 +535,9 @@ components:
         holderName: "Name Surname"
         brand: "VISA"
         threeDsData: "threeDsData"
-    NpgAuthRequestDetails:
+    CardsAuthRequestDetails:
       type: object
-      description: Additional payment authorization details for NPG authorization
+      description: Additional payment authorization details for cards NPG authorization
       properties:
         detailType:
           description: property discriminator, used to discriminate the authorization request detail. Fixed value 'cards'
