--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -66,8 +66,8 @@ microservice-chart:
       ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service-blue
       ECS_SERVICE_ENVIRONMENT: "prod"
       NPG_URI: "https://localhost/npg"
-      NPG_READ_TIMEOUT: 10000
-      NPG_CONNECTION_TIMEOUT: 10000
+      NPG_READ_TIMEOUT: "10000"
+      NPG_CONNECTION_TIMEOUT: "10000"
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -185,8 +185,8 @@ microservice-chart:
     ECS_SERVICE_NAME: pagopa-ecommerce-transactions-service
     ECS_SERVICE_ENVIRONMENT: "prod"
     NPG_URI: "https://localhost/npg"
-    NPG_READ_TIMEOUT: 10000
-    NPG_CONNECTION_TIMEOUT: 10000
+    NPG_READ_TIMEOUT: "10000"
+    NPG_CONNECTION_TIMEOUT: "10000"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
