--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -451,11 +451,14 @@ components:
           oneOf:
             - $ref: "#/components/schemas/PostePayAuthRequestDetails"
             - $ref: "#/components/schemas/CardAuthRequestDetails"
+            - $ref: "#/components/schemas/CardsAuthRequestDetails"
           discriminator:
             propertyName: detailType
             mapping:
               postepay: "#/components/schemas/PostePayAuthRequestDetails"
               card: "#/components/schemas/CardAuthRequestDetails"
+              cards: "#/components/schemas/CardsAuthRequestDetails"
+
       required:
         - amount
         - fee
@@ -469,7 +472,7 @@ components:
       description: Additional payment authorization details for the PostePay payment method
       properties:
         detailType:
-          description: property discriminator, used to discriminate the authorization request detail instance
+          description: property discriminator, used to discriminate the authorization request detail. Fixed value 'postepay'
           type: string
         accountEmail:
           type: string
@@ -486,7 +489,7 @@ components:
       description: Additional payment authorization details for credit cards
       properties:
         detailType:
-          description: property discriminator, used to discriminate the authorization request detail
+          description: property discriminator, used to discriminate the authorization request detail. Fixed value 'card'
           type: string
         cvv:
           type: string
@@ -532,6 +535,22 @@ components:
         holderName: "Name Surname"
         brand: "VISA"
         threeDsData: "threeDsData"
+    CardsAuthRequestDetails:
+      type: object
+      description: Additional payment authorization details for cards NPG authorization
+      properties:
+        detailType:
+          description: property discriminator, used to discriminate the authorization request detail. Fixed value 'cards'
+          type: string
+        sessionId:
+          type: string
+          description: NPG transaction session id
+      required:
+        - detailType
+        - sessionId
+      example:
+        detailType: "cards"
+        sessionId: "session-id"
     RequestAuthorizationResponse:
       type: object
       description: Response body for requesting an authorization for a transaction
