--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -130,7 +130,7 @@ microservice-chart:
     ECOMMERCE_PAYMENT_METHODS_APY_KEY: payment-method-api-key
     OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
     NPG_API_KEY: npg-api-key
-    NPG_PSP_CARDS_KEYS: npg-psp-cards-keys
+    NPG_PSP_CARDS_KEYS: npg-cards-psp-keys
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
