--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,5 +69,5 @@ npg.uri=${NPG_URI}
 npg.readTimeout=${NPG_READ_TIMEOUT}
 npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
 npg.client.key=${NPG_API_KEY}
-npg.psp.cards.keys=${NPG_PSP_CARDS_KEYS}
-npg.psp.cards.pspList=${NPG_PSP_CARDS_PSP_LIST}
+npg.authorization.cards.keys=${NPG_CARDS_PSP_KEYS}
+npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
