--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -577,11 +577,13 @@ components:
           oneOf:
             - $ref: '#/components/schemas/OutcomeVposGateway'
             - $ref: '#/components/schemas/OutcomeXpayGateway'
+            - $ref: '#/components/schemas/OutcomeNpgGateway'
           discriminator:
             propertyName: paymentGatewayType
             mapping:
               XPAY: "#/components/schemas/OutcomeXpayGateway"
               VPOS: "#/components/schemas/OutcomeVposGateway"
+              NPG: '#/components/schemas/OutcomeNpgGateway'
         timestampOperation:
           type: string
           format: date-time
@@ -1114,6 +1116,42 @@ components:
       required:
         - paymentGatewayType
         - outcome
+    OutcomeNpgGateway:
+      type: object
+      properties:
+        paymentGatewayType:
+          type: string
+          example: 'NPG'
+        operationResult:
+          type: string
+          description: outcome received by NPG - https://developer.nexi.it/it/api/notifica
+          enum:
+            - AUTHORIZED
+            - EXECUTED
+            - DECLINED
+            - DENIED_BY_RISK
+            - THREEDS_VALIDATED
+            - THREEDS_FAILED
+            - PENDING
+            - CANCELED
+            - VOIDED
+            - REFUNDED
+            - FAILED
+        orderId:
+          description: Operator unique order ID
+          type: string
+        operationId:
+          description: Operation ID
+          type: string
+        authorizationCode:
+          type: string
+          description: Authorization code
+        paymentEndToEndId:
+          description: Circuit unique transaction ID
+          type: string
+      required:
+        - paymentGatewayType
+        - operationResult
   requestBodies:
     NewTransactionRequest:
       required: true
