--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -12,7 +12,7 @@ resources:
     - repository: pagopaEcommerceLocal
       type: github
       name: pagopa/pagopa-ecommerce-local 
-      ref: main
+      ref: CHK-1871-local-ecommerce-reorganization
       endpoint: 'io-azure-devops-github-ro'
 
 stages:
@@ -99,7 +99,7 @@ stages:
           displayName: 'Health check'
         - script: yarn global add newman
           displayName: 'newman installation'
-        - script: newman run api-tests/ecommerce-for-checkout/transaction-service/transaction-service_ecommerce_local.postman_collection.json --environment=api-tests/ecommerce-for-checkout/transaction-service/transaction-service_ecommerce_local.postman_environment.json --reporters cli,junit --reporter-junit-export Results/checkout-api-TEST.xml
+        - script: newman run api-tests/transaction-service/transaction-service_ecommerce_local.postman_collection.json --environment=api-tests/transaction-service/transaction-service_ecommerce_local.postman_environment.json --reporters cli,junit --reporter-junit-export Results/checkout-api-TEST.xml
           displayName: 'Run api test'
           continueOnError: false
         - task: PublishTestResults@2
