feat(env variable): added new CHECKOUT_URI env variable

--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -58,6 +58,7 @@ logo.cardBrandMapping={\
   DINERS:'https://diners.cdn.url',\
   UNKNOWN:'https://unknown.cdn.url'}
 
+checkout.uri=http://localhost/checkout
 npg.uri=http://localhost/npg
 npg.readTimeout=10000
 npg.connectionTimeout=10000
