--- a/.env.example
+++ b/.env.example
@@ -55,7 +55,7 @@ PERSONAL_DATA_VAULT_API_KEY=personal-data-vault-api-key
 PERSONAL_DATA_VAULT_API_BASE_PATH="http://pagopa-pdv-mock:8092"
 
 LOGO_CARD_BRANDING_MAPPING={VISA:'https://dev.checkout.pagopa.it/assets/creditcard/carta_visa.png',MASTERCARD:'https://dev.checkout.pagopa.it/assets/creditcard/carta_mc.png',DINERS:'https://dev.checkout.pagopa.it/assets/creditcard/carta_diners.png',MAESTRO:'https://dev.checkout.pagopa.it/assets/creditcard/carta_maestro.png',AMEX:'https://dev.checkout.pagopa.it/assets/creditcard/carta_amex.png',UNKNOWN:'https://dev.checkout.pagopa.it/assets/creditcard/generic.png'}
-
+CHECKOUT_URI=http://test.pagopa.it/
 NPG_URI="https://localhost/npg"
 NPG_READ_TIMEOUT=10000
 NPG_CONNECTION_TIMEOUT=10000
