--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -117,6 +117,7 @@ microservice-chart:
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
     NPG_CARDS_PSP_LIST: "BCITITMM"
+    CHECKOUT_URI: "https://dev.checkout.pagopa.it"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
