--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -67,6 +67,7 @@ microservice-chart:
       NPG_READ_TIMEOUT: "10000"
       NPG_CONNECTION_TIMEOUT: "10000"
       NPG_CARDS_PSP_LIST: "BCITITMM"
+      CHECKOUT_URI: "https://uat.checkout.pagopa.it"
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -186,6 +187,7 @@ microservice-chart:
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
     NPG_CARDS_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
+    CHECKOUT_URI: "https://uat.checkout.pagopa.it"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
