--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -542,15 +542,15 @@ components:
         detailType:
           description: property discriminator, used to discriminate the authorization request detail. Fixed value 'cards'
           type: string
-        sessionId:
+        orderId:
           type: string
-          description: NPG transaction session id
+          description: NPG transaction order id
       required:
         - detailType
-        - sessionId
+        - orderId
       example:
         detailType: "cards"
-        sessionId: "session-id"
+        orderId: "orderId"
     RequestAuthorizationResponse:
       type: object
       description: Response body for requesting an authorization for a transaction
