fix(deploy): fix NPG url for DEV and UAT envs (#309)
* fix(deploy): fix NPG url for DEV and UAT envs

* feat(pom): modified commons reference

* feat(pom): restore pom with new common version

* feat(env variable): added new CHECKOUT_URI env variable

* feat(logic NPG): added switch for handle NPG response

* fix(logic NPG): fixed URI build

* fix(gdi): gdiIframeUrl param

* Fix NPG logic for handle orderId (#310)

* fix(logic NPG): modified call to retrieve card data with orderId and extract sessionId from response for invoke confirm payment

* feat: added log for debug

* fix NPG auth status and removed log

* fix removed log

* fix removed log

* fix(env): renamed checkout uri to checkout basePath

* fix(env): renamed checkout uri to checkout basePath

* fix(pom): restore pom commons version and payment method openapi

* fix(env example): CHECKOUT_BASEPATH to CHECKOUT_BASE_PATH

* refactor: replace `CHECKOUT_URI` -> `CHECKOUT_BASE_PATH`

* feat(tests): added tests for NPG response

---------

Co-authored-by: Fernando-Granato <fernando.granato@pagopa.it>
Co-authored-by: Simone Infante <simone.infante@pagopa.it>
Co-authored-by: Fernando-Granato <117268775+Fernando-Granato@users.noreply.github.com>

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -113,10 +113,11 @@ microservice-chart:
     OTEL_METRICS_EXPORTER: otlp
     OTEL_LOGS_EXPORTER: none
     OTEL_TRACES_SAMPLER: "always_on"
-    NPG_URI: "https://localhost/npg"
+    NPG_URI: "https://stg-ta.nexigroup.com/api/phoenix-0.0"
     NPG_READ_TIMEOUT: "10000"
     NPG_CONNECTION_TIMEOUT: "10000"
     NPG_CARDS_PSP_LIST: "BCITITMM"
+    CHECKOUT_BASE_PATH: "https://dev.checkout.pagopa.it"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
