--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,6 +64,7 @@ warmup.request.newTransaction.noticeCodePrefix=${WARMUP_REQUEST_NEW_TRANSACTION_
 
 logo.cardBrandMapping=${LOGO_CARD_BRANDING_MAPPING}
 
+checkout.basePath=${CHECKOUT_BASE_PATH}
 npg.uri=${NPG_URI}
 npg.readTimeout=${NPG_READ_TIMEOUT}
 npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
