add NPG between possible values of pgs id

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -154,7 +154,7 @@ paths:
           name: x-pgs-id
           schema:
             type: string
-            pattern: 'XPAY|VPOS'
+            pattern: 'XPAY|VPOS|NPG'
           required: false
           description: Pgs identifier (populated by APIM policy)
       requestBody:
