feat(jwt): added orderId into openapi for post transaction api

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -362,6 +362,10 @@ components:
           description: Cart identifier provided by creditor institution
           type: string
           example: idCartFromCreditorInstitution
+        orderId:
+          description: NPG orderId
+          type: string
+          example: orderId
       required:
         - paymentNotices
         - email
