Chk 1921 feature flag activate (#327)
* fix(refactoring): refactored domain objects

* feat(activation): handle v2 version

* fix: junit tests

* feat: authorization handler v2

* fix: junit tests

* fix(tests): fixed tests with transactionUtils

* fix: refactoring

* fix: junit tests

* fix: refactoring

* fix: authorization requested handler

* refactor(v2): updated authorization update command handler and projection handler to v2

* feat(v1): moved v1 tests into v1 package

* fix: junit tests

* feat(v2 closure handler): added new v2 handler and command

* feat(v2): Projection handler v2 for ClosureError ClosureSend and Refund requested

* feat(v2): Fixed logic for invoke close payment v2

* feat(junit test): fixed junit tests problems

* feat(user cancellation): added common abstract handler and v1 and v2 handler for different version

* feat(user cancellation): added projection handler for all version v1 and v2

* feat(user cancellation): fixed transaction service logic

* feat(user cancellation): fixed junit tests

* feat(request user receipt): added common handler and different handler for version v1 and v2

* feat(request user receipt): modified login into transaction service for handle different version

* feat(request user receipt): fixed tests

* feat(get-transaction): handling for view v2

* fix: customize exception for unhandled version

* refactor(v2): updated authorization update command handler and projection handler to v2

* feat(v1): moved v1 tests into v1 package

* fix: junit tests

* fix: spotless formatting

* fix: merge

* fix: spotless

* fix: import

* fix: merge

* feat(env): added new parameter ECOMMERCE_EVENT_VERSION

* feat(activate): added new v2 handler and projection

* feat(activate): added login into TransactionService.java and fixed tests

* fix queue async client name

* fix space into env variable

---------

Co-authored-by: Pietro Tota <pietro.tota@p

--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,4 @@ NPG_CONNECTION_TIMEOUT=10000
 NPG_API_KEY="npg-api-key"
 NPG_CARDS_PSP_LIST=CIPBITMM,BNLIITRR,BCITITMM,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX
 NPG_CARDS_PSP_KEYS={"CIPBITMM":"CIPBITMM-api-key","BNLIITRR":"BNLIITRR-api-key","BCITITMM":"BCITITMM-api-key","UNCRITMM":"UNCRITMM-api-key","BPPIITRRXXX":"BPPIITRRXXX-api-key","PPAYITR1XXX":"PPAYITR1XXX-api-key"}
+ECOMMERCE_EVENT_VERSION=V2
