fix: deploy on fix branch

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -158,7 +158,7 @@ stages:
         succeeded(),
         eq(${{parameters.UAT_PROD_DEPLOY}}, true),
         or(
-          eq(variables['Build.SourceBranch'], 'refs/heads/main'),
+          eq(variables['Build.SourceBranch'], 'refs/heads/circuit-breaker-config'),
           startsWith(variables['Build.SourceBranch'], 'refs/tags')
         )
        )
@@ -267,7 +267,7 @@ stages:
                   gitEmail: $(GIT_EMAIL)
                   gitUsername: $(GIT_USERNAME)
                   gitHubConnection: $(GITHUB_CONNECTION)
-                  release_branch: main
+                  release_branch: circuit-breaker-config
                   semver_chart: '${{ parameters.RELEASE_CHART_SEMVER }}'
                   semver: '${{ parameters.RELEASE_SEMVER }}'
           - template: azure-templates/chart-current-version.yml
@@ -309,7 +309,7 @@ stages:
         in(dependencies.tag_docker_release.result, 'Succeeded', 'Skipped'),
         in(dependencies.Release.result, 'Succeeded', 'Skipped'),
         or(
-          eq(variables['Build.SourceBranch'], 'refs/heads/main'),
+          eq(variables['Build.SourceBranch'], 'refs/heads/circuit-breaker-config'),
           startsWith(variables['Build.SourceBranch'], 'refs/tags')
         )
       )
