--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -25,7 +25,7 @@ microservice-chart:
       REDIS_PORT: "6380"
       REDIS_SSL_ENABLED: "true"
       NODO_HOSTNAME: https://api.platform.pagopa.it
-      NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
+      NODE_FOR_PSP_URI: /nodo-auth/node-for-psp/v1
       NODO_READ_TIMEOUT: "10000"
       NODO_CONNECTION_TIMEOUT: "10000"
       NODO_PARALLEL_REQUESTS: "5"
@@ -146,7 +146,7 @@ microservice-chart:
     REDIS_PORT: "6380"
     REDIS_SSL_ENABLED: "true"
     NODO_HOSTNAME: https://api.platform.pagopa.it
-    NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
+    NODE_FOR_PSP_URI: /nodo-auth/node-for-psp/v1
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
     NODO_PARALLEL_REQUESTS: "5"
