--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -155,7 +155,7 @@ paths:
           schema:
             type: string
             pattern: 'XPAY|VPOS'
-          required: false
+          required: true
           description: Pgs identifier (populated by APIM policy)
       requestBody:
         $ref: "#/components/requestBodies/RequestAuthorizationRequest"
