--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
         <spotless.version>2.28.0</spotless.version>
         <ecs-logging-version>1.5.0</ecs-logging-version>
     </properties>
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -38,7 +44,7 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
-            <groupId>it.pagopa</groupId>
+            <groupId>com.github.pagopa</groupId>
             <artifactId>pagopa-ecommerce-commons</artifactId>
             <version>${pagopa-ecommerce-commons.version}</version>
         </dependency>
@@ -202,7 +208,7 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>it.pagopa</groupId>
+            <groupId>com.github.pagopa</groupId>
             <artifactId>pagopa-ecommerce-commons</artifactId>
             <version>${pagopa-ecommerce-commons.version}</version>
             <type>test-jar</type>
@@ -427,26 +433,6 @@
                 <configuration>
                     <argLine>${argLine} --enable-preview</argLine>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-scm-plugin</artifactId>
-                <version>2.0.0-M3</version>
-                <configuration>
-                    <skipCheckoutIfExists>false</skipCheckoutIfExists>
-                    <connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
-                    <scmVersionType>tag</scmVersionType>
-                    <scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
-                    <goals>install -DskipTests</goals>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>bootstrap</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
