--- a/pom.xml
+++ b/pom.xml
@@ -292,6 +292,31 @@
                         </configuration>
                     </execution>
                     <execution>
+                        <id>transaction-api-v2</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${project.basedir}/api-spec/v2/transactions-api.yaml</inputSpec>
+                            <generatorName>spring</generatorName>
+                            <library>spring-boot</library>
+                            <modelNameSuffix>Dto</modelNameSuffix>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                            <configOptions>
+                                <basePackage>it.pagopa.generated.transactions.v2.server</basePackage>
+                                <modelPackage>it.pagopa.generated.transactions.v2.server.model</modelPackage>
+                                <apiPackage>it.pagopa.generated.transactions.v2.server.api</apiPackage>
+                                <configPackage>it.pagopa.generated.transactions.v2.server.config</configPackage>
+                                <interfaceOnly>true</interfaceOnly>
+                                <hideGenerationTimestamp>true</hideGenerationTimestamp>
+                                <skipDefaultInterface>true</skipDefaultInterface>
+                                <useSwaggerUI>false</useSwaggerUI>
+                                <reactive>true</reactive>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+                    <execution>
                         <id>payment-methods-api</id>
                         <goals>
                             <goal>generate</goal>
