feat(PATCH): added paymentCircuit into PATH npg detail

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -1149,6 +1149,9 @@ components:
         paymentEndToEndId:
           description: Circuit unique transaction ID
           type: string
+        paymentCircuit:
+          description: Payment circuit
+          type: string
       required:
         - paymentGatewayType
         - operationResult
