--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -58,6 +58,13 @@ logo.cardBrandMapping={\
   DINERS:'https://diners.cdn.url',\
   UNKNOWN:'https://unknown.cdn.url'}
 
+logo.npgPaymentCircuitMapping={\
+  VISA:'https://visa.cdn.url',\
+  MC:'https://mastercard.cdn.url',\
+  AMEX:'https://amex.cdn.url',\
+  DINERS:'https://diners.cdn.url',\
+  UNKNOWN:'https://unknown.cdn.url'}
+
 checkout.basePath=http://localhost/checkout
 npg.uri=http://localhost/npg
 npg.readTimeout=10000
