feat(PATCH): added rrn into PATH npg detail

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -1152,6 +1152,8 @@ components:
         paymentCircuit:
           description: Payment circuit
           type: string
+        rrn:
+          type: string
       required:
         - paymentGatewayType
         - operationResult
