feat(nodo): add env for clientid used for closepayment

--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -30,6 +30,7 @@ microservice-chart:
       NODO_CONNECTION_TIMEOUT: "10000"
       NODO_PARALLEL_REQUESTS: "5"
       NODO_ALL_CCP_ON_TRANSFER_IBAN_ENABLED: "true"
+      NODO_ECOMMERCE_CLIENT_ID: ecomm
       ECOMMERCE_PAYMENT_METHODS_URI: https://api.uat.platform.pagopa.it/ecommerce/payment-methods-service/v1
       ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT: "10000"
       ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT: "10000"
@@ -151,6 +152,7 @@ microservice-chart:
     NODO_CONNECTION_TIMEOUT: "10000"
     NODO_PARALLEL_REQUESTS: "5"
     NODO_ALL_CCP_ON_TRANSFER_IBAN_ENABLED: "true"
+    NODO_ECOMMERCE_CLIENT_ID: ecomm
     ECOMMERCE_PAYMENT_METHODS_URI: https://api.uat.platform.pagopa.it/ecommerce/payment-methods-service/v1
     ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT: "10000"
     ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT: "10000"
