--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -6,6 +6,7 @@ nodo.retry=2
 nodo.connection.string={"idPSP":"idPsp","idChannel":"idChannel","idBrokerPSP":"idBrokerPSP","password":"password"}
 nodo.parallelRequests=5
 nodo.allCCPOnTransferIbanEnabled=true
+nodo.ecommerce.clientId=ecomm
 
 nodoPerPM.uri=https://localhost/nodo/informazioniPagamento
 nodoPerPM.readTimeout=10000
