--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ NODO_CONNECTION_TIMEOUT=10000
 NODO_CONNECTION_STRING="{\"idPSP\":\"idPsp\",\"idChannel\":\"idChannel\",\"idBrokerPSP\":\"12345678912\",\"password\":\"password\"}"
 NODO_PARALLEL_REQUESTS=5
 NODO_ALL_CCP_ON_TRANSFER_IBAN_ENABLED=false
+NODO_ECOMMERCE_CLIENT_ID=ecommdev
 
 PAYMENT_TRANSACTIONS_GATEWAY_URI="http://pagopa-ecommerce-traefik/transactions-gateway"
 PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT=10000
