Chk 1919 npg notify logo (#338)
* feat(PATCH): added paymentCircuit into PATH npg detail

* feat(PATCH): added rrn into PATH npg detail

* feat(PATCH): removed paymentCircuit

* fix: commons branch ref

* feat: npg logo handling

* feat: npg logo handling

* fix: junit tests

* fix: junit tests

* fix: rrn

* fix: add tests for coverage

* fix: README.md

* MOCK

* fix: save brand into auth requested event

* fix: tests

* fix: remove unused code

---------

Co-authored-by: Fernando-Granato <fernando.granato@pagopa.it>

--- a/.env.example
+++ b/.env.example
@@ -56,6 +56,7 @@ PERSONAL_DATA_VAULT_API_KEY=personal-data-vault-api-key
 PERSONAL_DATA_VAULT_API_BASE_PATH="http://pagopa-pdv-mock:8092"
 
 LOGO_CARD_BRANDING_MAPPING={VISA:'https://dev.checkout.pagopa.it/assets/creditcard/carta_visa.png',MASTERCARD:'https://dev.checkout.pagopa.it/assets/creditcard/carta_mc.png',DINERS:'https://dev.checkout.pagopa.it/assets/creditcard/carta_diners.png',MAESTRO:'https://dev.checkout.pagopa.it/assets/creditcard/carta_maestro.png',AMEX:'https://dev.checkout.pagopa.it/assets/creditcard/carta_amex.png',UNKNOWN:'https://dev.checkout.pagopa.it/assets/creditcard/generic.png'}
+LOGO_NPG_PAYMENT_CIRCUIT_MAPPING={VISA:'https://dev.checkout.pagopa.it/assets/creditcard/carta_visa.png',MC:'https://dev.checkout.pagopa.it/assets/creditcard/carta_mc.png',DINERS:'https://dev.checkout.pagopa.it/assets/creditcard/carta_diners.png',AMEX:'https://dev.checkout.pagopa.it/assets/creditcard/carta_amex.png',UNKNOWN:'https://dev.checkout.pagopa.it/assets/creditcard/generic.png'}
 CHECKOUT_BASE_PATH=http://test.pagopa.it/
 NPG_URI="https://localhost/npg"
 NPG_READ_TIMEOUT=10000
