--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,6 +64,7 @@ confidentialDataManager.personalDataVault.apiBasePath=${PERSONAL_DATA_VAULT_API_
 warmup.request.newTransaction.noticeCodePrefix=${WARMUP_REQUEST_NEW_TRANSACTION_NOTICE_CODE_PREFIX:3020}
 
 logo.cardBrandMapping=${LOGO_CARD_BRANDING_MAPPING}
+logo.npgPaymentCircuitMapping=${LOGO_NPG_PAYMENT_CIRCUIT_MAPPING}
 
 checkout.basePath=${CHECKOUT_BASE_PATH}
 npg.uri=${NPG_URI}
