feat(deploy pipeline): restore checkout

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -235,6 +235,7 @@ stages:
     jobs:
       - job: newman_api_test
         steps:
+          - checkout: pagopaCheckoutTests
           - template: azure-templates/api-tests.yml
             parameters:
               ENV_FILE: "api-tests/uat.transactions.blue.envs.json"
